--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "homepage": "https://0ldhands.github.io/portfolio",
+  "homepage": "https://0ldhands.github.io/kevinsportfolio",
   "name": "kevinportfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy":"npm run build",
-    "deplooy":"gh -pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
